# thoth-ipc

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  versions.json
cpp/libipc/: CMakeLists.txt
cpp/libipc/bench/: CMakeLists.txt  bench_ipc.cpp
cpp/libipc/demo/audio_realtime/: CMakeLists.txt  README.md  host.cpp  rt_audio_common.h  rt_audio_ffi.cpp  rt_audio_ffi.h  service.cpp
cpp/libipc/demo/audio_service/: CMakeLists.txt  audio_protocol.fbs  host.cpp  service.cpp
cpp/libipc/demo/bounded_buffer/: CMakeLists.txt  main.cpp  run.sh
cpp/libipc/demo/channel_aggregator/: main.cpp
cpp/libipc/demo/pipeline/: CMakeLists.txt  main.cpp  run.sh
cpp/libipc/demo/secure_pos/: main.cpp
cpp/libipc/doc/: async-recv.md  macos-deployment.md  macos-technical-notes.md  orchestration.md  proto-layer.md  windows-technical-notes.md
cpp/libipc/include/libipc/: abi_generated.hpp  async_recv.h  buffer.h  ipc.h  shm.h
cpp/libipc/src/: CMakeLists.txt
cpp/libipc/src/libipc/: buffer.cpp  ipc.cpp  liveness.h  notify.h  prod_cons.h  queue.h  secure_crypto_openssl_evp_c.cpp  shm.cpp  waiter.h
cpp/libipc/test/: CMakeLists.txt  test_async_recv.cpp  test_async_recv_coro.cpp  test_ipc_channel.cpp  test_liveness.cpp  test_mutex.cpp  test_notify.cpp  test_proto_codec_capnp.cpp  test_proto_codec_protobuf.cpp  test_proto_codec_protobuf_google_message_lite.cpp  test_proto_codec_secure.cpp  test_shm.cpp  test_sync_abi.cpp
cpp/libipc/test/imp/: test_imp_uninitialized.cpp
cpp/libipc/test/xlang/: xasync.cpp  xcoro.cpp  xlang.cpp
cpp/thoth-ipc/: CMakeLists.txt
cpp/thoth-ipc/bench/: CMakeLists.txt  bench_ipc.cpp
cpp/thoth-ipc/demo/audio_realtime/: CMakeLists.txt  README.md  host.cpp  rt_audio_common.h  rt_audio_ffi.cpp  service.cpp
cpp/thoth-ipc/demo/audio_service/: CMakeLists.txt  README.md  host.cpp  service.cpp
cpp/thoth-ipc/demo/bounded_buffer/: CMakeLists.txt  main.cpp  run.sh
cpp/thoth-ipc/demo/channel_aggregator/: CMakeLists.txt  main.cpp
cpp/thoth-ipc/demo/chat/: CMakeLists.txt  main.cpp
cpp/thoth-ipc/demo/msg_que/: CMakeLists.txt  main.cpp
cpp/thoth-ipc/demo/pipeline/: CMakeLists.txt  main.cpp  run.sh
cpp/thoth-ipc/demo/secure_pos/: CMakeLists.txt  README.md  main.cpp
cpp/thoth-ipc/demo/send_recv/: CMakeLists.txt  main.cpp
cpp/thoth-ipc/doc/: async-recv.md  macos-deployment.md  macos-technical-notes.md  modules.md  orchestration.md  proto-layer.md  rust-services.md  windows-technical-notes.md
cpp/thoth-ipc/include/thoth-ipc/: abi_generated.hpp  async_recv.h  buffer.h  condition.h  def.h  ipc.h  mutex.h  rw_lock.h  semaphore.h  shm.h
cpp/thoth-ipc/modules/: thoth.ipc.cppm
cpp/thoth-ipc/src/: CMakeLists.txt  test_mutex.patch
cpp/thoth-ipc/src/thoth-ipc/: buffer.cpp  ipc.cpp  liveness.h  msg_layout.h  notify.h  policy.h  prod_cons.h  queue.h  shm.cpp  waiter.h
cpp/thoth-ipc/test/: CMakeLists.txt  test_async_recv.cpp  test_async_recv_coro.cpp  test_buffer.cpp  test_condition.cpp  test_ipc_channel.cpp  test_liveness.cpp  test_locks.cpp  test_mutex.cpp  test_notify.cpp  test_proto_codec_capnp.cpp  test_proto_codec_protobuf.cpp  test_proto_codec_protobuf_google_message_lite.cpp  test_proto_codec_secure.cpp  test_semaphore.cpp  test_shm.cpp  test_sync_abi.cpp
cpp/thoth-ipc/test/archive/: CMakeLists.txt.old  test.h  test_ipc.cpp  test_platform.cpp  test_queue.cpp  test_shm.cpp  test_sync.cpp  test_thread_utility.cpp  test_waiter.cpp
cpp/thoth-ipc/test/concur/: test_concur_intrusive_stack.cpp
cpp/thoth-ipc/test/imp/: test_imp_byte.cpp  test_imp_codecvt.cpp  test_imp_detect_plat.cpp  test_imp_error.cpp  test_imp_expected.cpp  test_imp_fmt.cpp  test_imp_generic.cpp  test_imp_log.cpp  test_imp_result.cpp  test_imp_span.cpp  test_imp_system.cpp  test_imp_uninitialized.cpp
cpp/thoth-ipc/test/mem/: test_mem_block_pool.cpp  test_mem_bytes_allocator.cpp  test_mem_central_cache_allocator.cpp  test_mem_central_cache_pool.cpp  test_mem_new.cpp  (+1 more)
demo/audio_realtime/: CMakeLists.txt  README.md  host.cpp  rt_audio_ffi.h  service.cpp
demo/audio_realtime/rust_service/: build.rs
demo/audio_service/: CMakeLists.txt  README.md  audio_protocol.fbs  host.cpp  service.cpp
rust/libipc/: Cargo.toml  build.rs  test_yield.patch
rust/libipc/benches/: alloc.rs
rust/libipc/doc/: benchmarks.md
rust/libipc/src/: async_recv.rs  buffer.rs  channel.rs  chunk_storage.rs  circ.rs  condition.rs  lib.rs  liveness.rs  mem.rs  mutex.rs  notify.rs  rw_lock.rs  scoped_access.rs  semaphore.rs  shm.rs  shm_name.rs  spin_lock.rs  sync_abi.rs  waiter.rs
rust/libipc/tests/: async_notify.rs  interop.rs  test_buffer.rs  test_chan_wrapper.rs  test_channel.rs  test_channel_stress.rs  test_circ.rs  test_condition.rs  test_mutex.rs  test_proto.rs  test_proto_codec_capnp.rs  test_proto_codec_protobuf.rs  test_proto_codec_protobuf_prost.rs  test_proto_codec_secure.rs  test_proto_typed.rs  test_rw_lock.rs  test_semaphore.rs  test_shm.rs  test_spin_lock.rs  test_waiter.rs
rust/thoth-ipc/: Cargo.toml  build.rs  test_yield.patch
rust/thoth-ipc/benches/: alloc.rs
rust/thoth-ipc/doc/: benchmarks.md
rust/thoth-ipc/src/: abi_generated.rs  async_recv.rs  buffer.rs  channel.rs  chunk_storage.rs  circ.rs  condition.rs  lib.rs  liveness.rs  mem.rs  mutex.rs  notify.rs  rw_lock.rs  semaphore.rs  shm.rs  shm_name.rs  spin_lock.rs  sync_abi.rs  waiter.rs
rust/thoth-ipc/tests/: async_notify.rs  interop.rs  test_buffer.rs  test_chan_wrapper.rs  test_channel.rs  test_channel_stress.rs  test_circ.rs  test_condition.rs  test_mutex.rs  test_proto.rs  test_proto_codec_capnp.rs  test_proto_codec_protobuf.rs  test_proto_codec_protobuf_prost.rs  test_proto_codec_secure.rs  test_proto_typed.rs  test_rw_lock.rs  test_semaphore.rs  test_shm.rs  test_spin_lock.rs  test_waiter.rs
secure-crypto-c/: CMakeLists.txt  Package.swift
secure-crypto-c/src/: secure_crypto_c.c
tools/abi/: Cargo.toml
tools/abi/src/: main.rs
tools/xlang-runner/: Cargo.toml  README.md
tools/xlang-runner/src/: cases.rs  config.rs  exec.rs  harness.rs  main.rs  report.rs
(+552 files in other folders)
