[package]
name = "libipc"
version = "0.1.0"
edition = "2021"
description = "Pure Rust implementation of cpp-ipc shared memory and named mutex primitives"
license = "MIT"
publish = false

[features]
bump_alloc = ["dep:bumpalo"]
slab_pool = ["dep:slab"]

[dependencies]
flatbuffers = "24.3.25"
bumpalo = { version = "3", optional = true, features = ["collections"] }
slab = { version = "0.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "demo_send_recv"
path = "src/bin/demo_send_recv.rs"

[[bin]]
name = "demo_chat"
path = "src/bin/demo_chat.rs"

[[bin]]
name = "demo_msg_que"
path = "src/bin/demo_msg_que.rs"

[[bin]]
name = "demo_audio_service"
path = "src/bin/demo_audio_service.rs"

[[bin]]
name = "demo_audio_host"
path = "src/bin/demo_audio_host.rs"

[[bin]]
name = "demo_rt_audio_service"
path = "src/bin/demo_rt_audio_service.rs"

[[bin]]
name = "demo_rt_audio_host"
path = "src/bin/demo_rt_audio_host.rs"

[[bench]]
name = "alloc"
harness = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }
