[package]
name = "thoth-ipc"
version = "0.1.0"
edition = "2021"
description = "Cross-language IPC library (thoth-ipc) — Pure Rust port of the cpp-ipc transport core with typed protocol, secure codec, and multi-language ABI parity"
license = "MIT"
publish = false

[lib]
name = "libipc"
path = "src/lib.rs"

[features]
bump_alloc = ["dep:bumpalo"]
slab_pool = ["dep:slab"]
codec-protobuf = []
codec-protobuf-prost = ["codec-protobuf", "dep:prost"]
codec-capnp = []
secure-crypto-c = []
secure-crypto-openssl = ["secure-crypto-c"]

[dependencies]
flatbuffers = "24.3.25"
bumpalo = { version = "3", optional = true, features = ["collections"] }
slab = { version = "0.4", optional = true }
prost = { version = "0.13", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
cc = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "demo_send_recv"
path = "src/bin/demo_send_recv.rs"

[[bin]]
name = "demo_chat"
path = "src/bin/demo_chat.rs"

[[bin]]
name = "demo_msg_que"
path = "src/bin/demo_msg_que.rs"

[[bin]]
name = "demo_audio_service"
path = "src/bin/demo_audio_service.rs"

[[bin]]
name = "demo_audio_host"
path = "src/bin/demo_audio_host.rs"

[[bin]]
name = "demo_rt_audio_service"
path = "src/bin/demo_rt_audio_service.rs"

[[bin]]
name = "demo_rt_audio_host"
path = "src/bin/demo_rt_audio_host.rs"

[[bin]]
name = "bench_ipc"
path = "src/bin/bench_ipc.rs"

[[bench]]
name = "alloc"
harness = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }
