[package]
name = "thoth-ipc"
version = "0.4.0"
edition = "2021"
description = "Cross-language IPC library (thoth-ipc) — Pure Rust port of the cpp-ipc transport core with typed protocol, secure codec, and multi-language ABI parity"
license = "Apache-2.0 WITH LLVM-exception OR MIT"
publish = false

[lib]
name = "thoth_ipc"
path = "src/lib.rs"

[features]
# Layer 1: expose a per-receiver readiness handle signalled on enqueue (byte-exact
# with C++ THOTH_IPC_NOTIFY_FD) so a Rust send() wakes a C++ async_recv reactor.
# Zero cost when off. macOS uses libnotify; other POSIX uses named FIFOs.
notify = []
# Force the portable POSIX FIFO notify backend even on macOS (default is libnotify).
notify_fifo = ["notify"]
# Layer 2: an ergonomic async `AsyncRoute::recv().await` on top of the readiness
# fd, integrated with tokio's reactor via AsyncFd (no bespoke reactor thread).
# Runtime-agnostic users can instead drive native_wait_handle() themselves.
async-tokio = ["notify", "dep:tokio"]
# Windows only: name shared kernel objects in the `Global\` namespace (session 0 —
# services / cross-session) instead of the default session-local `Local\`. Must
# match the C++ `THOTH_IPC_WIN_OBJ_NAMESPACE` at build time. No effect on non-Windows.
win-global = []
bump_alloc = ["dep:bumpalo"]
slab_pool = ["dep:slab"]
# FlatBuffers audio service demos (demo_audio_host / demo_audio_service);
# needs `flatc` at build time to generate the schema code (FLATC env or PATH).
audio-demos = []
codec-protobuf = []
codec-protobuf-prost = ["codec-protobuf", "dep:prost"]
codec-capnp = []
secure-crypto-c = []
secure-crypto-openssl = ["secure-crypto-c"]

[dependencies]
flatbuffers = "=25.12.19"
bumpalo = { version = "3", optional = true, features = ["collections"] }
slab = { version = "0.4", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = ["net", "rt", "time", "sync"] }
prost = { version = "0.14", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[build-dependencies]
cc = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "demo_send_recv"
path = "src/bin/demo_send_recv.rs"

[[bin]]
name = "demo_chat"
path = "src/bin/demo_chat.rs"
[[bin]]
name = "demo_channel_aggregator"
path = "src/bin/demo_channel_aggregator.rs"
[[bin]]
name = "demo_pipeline"
path = "src/bin/demo_pipeline.rs"
[[bin]]
name = "demo_bounded_buffer"
path = "src/bin/demo_bounded_buffer.rs"

[[bin]]
name = "demo_msg_que"
path = "src/bin/demo_msg_que.rs"

[[bin]]
name = "demo_audio_service"
path = "src/bin/demo_audio_service.rs"
required-features = ["audio-demos"]

[[bin]]
name = "demo_audio_host"
path = "src/bin/demo_audio_host.rs"
required-features = ["audio-demos"]

[[bin]]
name = "demo_rt_audio_service"
path = "src/bin/demo_rt_audio_service.rs"

[[bin]]
name = "demo_rt_audio_host"
path = "src/bin/demo_rt_audio_host.rs"

[[bin]]
name = "bench_ipc"
path = "src/bin/bench_ipc.rs"

[[bin]]
name = "demo_secure_pos"
path = "src/bin/demo_secure_pos.rs"
required-features = ["secure-crypto-openssl", "codec-protobuf"]

[[bin]]
name = "demo_async_gateway"
path = "src/bin/demo_async_gateway.rs"
required-features = ["async-tokio"]

[[bin]]
name = "xlang"
path = "src/bin/xlang.rs"

[[bench]]
name = "alloc"
harness = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }
