# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025-2026 natyamatsya contributors

[package]
name = "xlang-runner"
version = "0.1.0"
edition = "2024"
description = "Cross-language IPC ABI test framework: plans and runs writer x reader matrices over the per-language harness binaries"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
